# 2FA_service_provider

./: README.md  docker-compose.yaml
service_provider/: Dockerfile  pyproject.toml
service_provider/app/: .test.env  constants.py  main.py  settings.py
service_provider/app/api/: base.py  sms_provider.py
service_provider/app/schemas/: schemas.py
tests/: test_api.py  test_sms_provider.py
